--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "ag-grid-angular": "^31.2.0",
+    "ag-grid-community": "^31.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
