create tickets component

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ testem.log
 .DS_Store
 Thumbs.db
 /.vs/helpdesk-panel/FileContentIndex/c1770763-e6fc-497d-8da0-0495cb8f5fef.vsidx
+/.vs/helpdesk-panel/FileContentIndex/c5a00ecd-fdc5-4a09-9ac9-55a83633d934.vsidx
+/.vs/helpdesk-panel/FileContentIndex/e1c0471e-80d1-4dba-bfb2-333f57caf497.vsidx
+/.vs/helpdesk-panel/FileContentIndex/9ac9f046-039e-42c4-bb76-1316f5f1b6ef.vsidx
+/.vs/helpdesk-panel/FileContentIndex/7660fc79-52f6-49d7-917b-6ed6c9a7dfe4.vsidx
