create tickets component

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Thumbs.db
 /.vs/helpdesk-panel/FileContentIndex/e1c0471e-80d1-4dba-bfb2-333f57caf497.vsidx
 /.vs/helpdesk-panel/FileContentIndex/9ac9f046-039e-42c4-bb76-1316f5f1b6ef.vsidx
 /.vs/helpdesk-panel/FileContentIndex/7660fc79-52f6-49d7-917b-6ed6c9a7dfe4.vsidx
+/.vs/helpdesk-panel/FileContentIndex/2556bac1-5c9d-41ca-8ce5-5155d74e7a67.vsidx
+/.vs/helpdesk-panel/FileContentIndex/d725d8fd-52ea-4f05-bac1-a80a4ed65478.vsidx
